# GeoQuizBackend

./: README.md  app.py  config.py  main.py  pyproject.toml  settings.toml
database/: __init__.py  beanie_manager.py  redis_manager.py
database/models/: quiz.py  quiz_session.py  user.py
handlers/: __init__.py  authorization.py  depends.py  general.py  quiz.py  quiz_session.py  quiz_sessuin.py  user.py
src/: app.py
src/database/: __init__.py  beanie_manager.py  redis_manager.py
src/database/models/: user.py
src/handlers/: __init__.py  authorization.py  depends.py  general.py
src/untils/: exceptions.py  roles.py
tests/: test_main.py
untils/: email_manager.py  exceptions.py  logger.py  role_manager.py  roles.py
