[tool.poetry]
name = "hackaton-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "hackaton_project"}]

[tool.poetry.dependencies]
python = "^3.11"
redis = "^4.5.1"
dynaconf = "^3.1.12"
fastapi = {extras = ["beanie"], version = "^0.94.1"}
uvicorn = "^0.21.1"
pytest = "^7.2.2"
aiohttp = "^3.8.4"
httpx = "^0.23.3"
beanie = "^1.17.0"
pydantic = {extras = ["email"], version = "^1.10.6"}
bcrypt = "^4.0.1"
aiosmtplib = "^2.0.1"
python-multipart = "^0.0.6"
pytest-mock = "^3.10.0"
pytest-asyncio = "^0.20.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
